All js completed and css improved

--- a/web-components/src/index.html
+++ b/web-components/src/index.html
@@ -2,12 +2,12 @@
 <html lang="ru">
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Create message</title>
+    <title>Messenger</title>
 </head>
 <body>
     <messenger-header></messenger-header>
-    <chat-list style="display: none"></chat-list>
-    <create-chat-button style="display: none"></create-chat-button>
-    <message-form action="/"></message-form>
+    <chat-list style="display: flex;"></chat-list>
+    <create-chat-button style="display: inline-block;"></create-chat-button>
+    <message-form action="/" style="display: none;"></message-form>
 </body>
 </html>
