Предыдущий коммит - удаление ненужных и индексация новых файлов. Текущий коммит - добавление изменений в файлы.

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Track Mail 2019 Valentina</title>
+    <title>2019 2 Track Frontend v Danilova</title>
   </head>
   <body>
     <noscript>
